--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "jade-brunch": "> 1.0 < 1.5",
 
     "uglify-js-brunch": "> 1.0 < 1.5",
-    "clean-css-brunch": "> 1.0 < 1.5"
+    "clean-css-brunch": "> 1.0 < 1.5",
+
+    "auto-reload-brunch": "> 1.0 < 1.5"
   },
   "devDependencies": {
   }
