--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "test": "brunch test"
   },
   "dependencies": {
+    "javascript-brunch": "> 1.0 < 1.5",
     "coffee-script-brunch": "> 1.0 < 1.5",
-    "stylus-brunch": ">= 1.0 < 1.4",
     "jade-brunch": "> 1.0 < 1.5",
+
+    "css-brunch": "> 1.0 < 1.5",
+    "stylus-brunch": ">= 1.0 < 1.4",
+    "sass-brunch": "> 1.0 < 1.5",
 
     "uglify-js-brunch": "> 1.0 < 1.5",
     "clean-css-brunch": "> 1.0 < 1.5",
